# RepoToTxt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  META.json  Makefile  ReadMe.md  USECASE.md  builder.py  builder.sh  default.nix  shell.nix  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ubuntu/: Dockerfile  devcontainer.json
.devcontainer/windows/: Dockerfile  devcontainer.json  post-create.ps1
.nix/: default.nix  shell.nix
.nix/overlays/: repototxt-overlay.nix
include/ui/: button_component.hpp  display_selected_component.hpp  instructions_component.hpp  menu_component.hpp  ui_component.hpp
include/utils/: utils.hpp
nix/overlays/: Readme.md  repototxt-overlay.nix
src/: main.cpp
src/ui/: button_component.cpp  display_selected_component.cpp  instructions_component.cpp  menu_component.cpp  ui_component.cpp
src/utils/: utils.cpp
